# digital-cerebellum

./: .gitignore  CHANGELOG.md  LICENSE  Meaning.md  README.md  SKILL.md  clawhub.json  config.yaml  mcp-config.json  pyproject.toml  requirements-benchmark.txt  requirements.txt  run.sh  skill.yaml
.github/workflows/: ci.yml
benchmarks/: dataset.py  export_paper_data.py  openclaw_benchmark.py  reliability_benchmark.py  results_ablation.json  results_baseline.json  results_quick.json  run_all.py  run_multi_model.py  runner.py  sequential_dataset.py  tank_benchmark.py  verify_data.py
benchmarks/results/: dataset_500.json  full_results.json  multi_model_results.json  phase2_results.json  phase3_results.json  sequential_results.json  webarena_analysis.json  webarena_baseline.json  webarena_full.json  webarena_no_memory.json  webarena_no_monitor.json  webarena_no_skill.json
benchmarks/results/paper/: ablation.csv  baseline.csv  learning_curve.csv  step_level.csv  tables.tex
benchmarks/webarena/: README.md  __init__.py  agent.py  analysis.py  cerebellum_agent.py  deploy_aws.py  runner.py  setup_docker.py  test_agent.py
digital_cerebellum/: __init__.py  brain.py  main.py  mcp_server.py
digital_cerebellum/agent/: __init__.py  cua_loop.py  playwright_computer.py
digital_cerebellum/core/: action_encoder.py  error_comparator.py  feature_encoder.py  forward_model.py  frequency_filter.py  golgi_gate.py  microzone.py  online_learner.py  pattern_separator.py  prediction_engine.py  state_encoder.py  state_estimator.py  temporal_detector.py  types.py
digital_cerebellum/cortex/: consolidation.py  cortex_interface.py
digital_cerebellum/emergence/: __init__.py  curiosity_drive.py  self_model.py  somatic_marker.py
digital_cerebellum/integrations/: __init__.py  langchain.py
digital_cerebellum/memory/: fluid_memory.py  habit_observer.py  skill_store.py  sleep_cycle.py
digital_cerebellum/micro_ops/: __init__.py  aim_trainer.py  engine.py  environments.py  gui_action_space.py  gui_controller.py  openclaw_env.py  screen_state_encoder.py  tank_env.py
digital_cerebellum/microzones/: __init__.py  api_call.py  file_operation.py  payment.py  response_prediction.py  shell_command.py  tool_call.py
digital_cerebellum/monitor/: __init__.py  cascade_detector.py  failure_memory.py  step_forward_model.py  step_monitor.py  types.py
digital_cerebellum/rhythm/: __init__.py  engine.py
digital_cerebellum/routing/: decision_router.py
digital_cerebellum/viz/: __init__.py  event_bus.py  server.py
digital_cerebellum/viz/static/: index.html
docs/: architecture.md  implementation.md  vision.md
examples/: agent_demo.py  brain_demo.py  clawhub_demo.py  fast_and_reliable_demo.py  gui_control_demo.py  interactive_demo.py  langchain_guard.py  micro_ops_demo.py  multi_microzone.py  openai_agent.py  sidecar_monitor.py  skill_acquisition_demo.py  step_monitor_demo.py  viz_demo.py
experiments/: closed_loop.py  synthetic_validation.py
experiments/results/: closed_loop_results.json
paper/: main.tex  references.bib  verify_numbers.py
src/: main.py
src/core/: error_comparator.py  feature_encoder.py  online_learner.py  prediction_engine.py  types.py
src/cortex/: cortex_interface.py
src/memory/: fluid_memory.py
src/routing/: decision_router.py
tests/: conftest.py  test_agent.py  test_core.py  test_gui_control.py  test_habit_observer.py  test_langchain_integration.py  test_mcp_server.py  test_micro_ops.py  test_microzones.py  test_new_microzones.py  test_openclaw_benchmark.py  test_phase1.py  test_phase2.py  test_phase3.py  test_skill_store.py  test_step_monitor.py  test_tank_battle.py  test_temporal_detector.py  test_viz.py
tests/integration/: run_integration.py  test_ab_comparison.py  test_mcp_http_integration.py  test_openclaw_live.py
