[project]
name = "digital-cerebellum"
version = "0.2.0"
description = "A cerebellar-inspired prediction-correction engine for LLM Agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "QEout"},
]
keywords = [
    "cerebellum", "llm", "agent", "prediction", "neuroscience",
    "online-learning", "safety", "tool-call", "ai-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "openai>=1.30",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/QEout/digital-cerebellum"
Repository = "https://github.com/QEout/digital-cerebellum"
Issues = "https://github.com/QEout/digital-cerebellum/issues"
Documentation = "https://github.com/QEout/digital-cerebellum/blob/main/docs/architecture.md"

[project.optional-dependencies]
mcp = [
    "mcp>=1.20",
]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
]

[project.scripts]
digital-cerebellum-mcp = "digital_cerebellum.mcp_server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["digital_cerebellum*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
